--- a/smt-libv2/meson.build
+++ b/smt-libv2/meson.build
@@ -8,10 +8,11 @@ project('rz-smt', 'c',
   ]
 )
 
-# handle the yxml dependency
 rz_core_dep = dependency('rz_core')
-plugins_dir = get_option('prefix') / rz_core_dep.get_variable(pkgconfig: 'plugindir', cmake: 'rz_core_PLUGINDIR')
+#plugins_dir = get_option('prefix') / rz_core_dep.get_variable(pkgconfig: 'plugindir', cmake: 'rz_core_PLUGINDIR')
+plugins_dir='~/.local/lib/rizin/plugins/'
 message('Plugins install directory: ' + plugins_dir)
+inc_dir = include_directories('include')
 
 py3_exe = import('python').find_installation()
 
@@ -20,4 +21,5 @@ library('rz-svd',
   dependencies: [rz_core_dep],
   install: true,
   install_dir: plugins_dir,
+  include_directories : inc_dir,
 )
