idea of RzILSymbolicVM

--- a/smt-libv2/meson.build
+++ b/smt-libv2/meson.build
@@ -1,14 +1,9 @@
 inc_dir = include_directories('include')
 
 library('rz-svd',
-  ['rz-smt.c'],
+  ['rz-smt.c', 'il_to_z3.c'],
   dependencies: [rz_core_dep, z3_dep],
   install: true,
   install_dir: plugins_dir,
   include_directories : inc_dir,
-)
-
-executable('z3_test',
-  ['z3_test.c'],
-  dependencies: [z3_dep],
 )
