--- a/rzil-rs/Cargo.toml
+++ b/rzil-rs/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bindgen = "0.65.1"
-cty = "0.2.2"
-pkg-config = "0.3.26"
+#libc="*"
+librz_il-sys = {path = "../librz_il-sys"}
+
+[[bin]]
+name = "test_bindings"
+path = "src/test_bindings.rs"
