--- a/rz-sym/Cargo.toml
+++ b/rz-sym/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 bitflags = "2.3.1"
+petgraph = "0.2.10"
+z3 = "0.12.1"
+rustproof-libsmt = "0.1.0"
 rzapi = { path = "../rzapi" }
-smtlib = { version = "0.1.6", features = ["z3"] }
+serde = { version = "1.0.188", features = ["derive"]}
+serde_json = "1.0.105"
 thiserror = "1.0.40"
 
