--- a/risee/Cargo.toml
+++ b/risee/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rz-sym"
+name = "risee"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,4 +15,4 @@ rzapi = { path = "../rzapi" }
 serde = { version = "1.0.188", features = ["derive"]}
 serde_json = "1.0.105"
 thiserror = "1.0.40"
-
+quick_cache = "0.4.0"
