--- a/risee/Cargo.toml
+++ b/risee/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.188", features = ["derive"]}
 serde_json = "1.0.105"
 thiserror = "1.0.40"
 quick_cache = "0.4.0"
+rangemap = "1.4.0"
