Refactored & renamed project & Add PureRef

--- a/rise/Cargo.toml
+++ b/rise/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 anyhow = "1.0.71"
 bitflags = "2.3.1"
 petgraph = "0.2.10"
-z3 = "0.12.1"
 rustproof-libsmt = "0.1.0"
 rzapi = { path = "../rzapi" }
 serde = { version = "1.0.188", features = ["derive"]}
@@ -17,3 +16,7 @@ serde_json = "1.0.105"
 thiserror = "1.0.40"
 quick_cache = "0.4.0"
 rangemap = "1.4.0"
+log = "0.4.20"
+z3 = "0.12.1"
+owning_ref = "0.4.1"
+z3-sys = "0.8.1"
