--- a/rise/Cargo.toml
+++ b/rise/Cargo.toml
@@ -10,3 +10,6 @@ quick_cache = "0.4.1"
 rzapi = { path = "../rzapi" }
 thiserror = "1.0.57"
 z3 = "0.12.1"
+
+[dev-dependencies]
+serde_json = "1.0.115"
