--- a/rise/Cargo.toml
+++ b/rise/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bitflags = "2.5.0"
-log = "0.4.21"
-quick_cache = "0.4.1"
+bitflags = "*"
+log = "*"
+owning_ref = "0.4.1"
+quick_cache = "*"
 rzapi = { path = "../rzapi" }
-thiserror = "1.0.57"
-z3 = "0.12.1"
+thiserror = "*"
+z3 = "*"
 
 [dev-dependencies]
 serde_json = "1.0.115"
